enable_testing()
find_package(GTest)
if (GTest_FOUND)
    add_executable(locked_test locked_test.cpp)
    target_link_libraries(locked_test mabe::locked GTest::Main gmock)
    target_compile_definitions(mabe_locked INTERFACE MABE_LOCKED_TESTING)
    gtest_add_tests(TARGET locked_test)
    set_target_properties(locked_test PROPERTIES CXX_STANDARD 17)
endif ()