find_package(GTest)
if (GTest_FOUND)
    add_executable(locked_test EXCLUDE_FROM_ALL locked_test.cpp)
    target_link_libraries(locked_test mabe::locked GTest::Main gmock)
    target_compile_definitions(mabe_locked INTERFACE MABE_LOCKED_TESTING)
    gtest_discover_tests(locked_test EXTRA_ARGS --gtest_output="xml:test_results.xml")
    set_target_properties(locked_test PROPERTIES CXX_STANDARD 17)
endif ()